--- a/src/App.css
+++ b/src/App.css
@@ -54,3 +54,18 @@
 	font-size: 1rem;
 }
 
+.text-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  gap: 1rem;
+  width: 100%;
+}
+@media (min-width: 768px) {
+  .about-us-container {
+    margin-left: 30rem;
+    margin-top: 3rem;
+  }
+}
